# hmiTester

./: CMakeLists.txt  hmiTester.pro  hmi_tester.cpp  hmi_tester.h  hmi_tester.ui  input_place.cpp  input_place.h  input_place.ui  main.cpp
hmi/: hmi_tester.cpp  hmi_tester.h  input_place.cpp  input_place.h  input_place.ui  json.h  json_custom_widgets.cpp  json_custom_widgets.h  json_data.h  json_place.cpp  json_place.h  json_place.ui  logger_place.cpp  logger_place.h  logger_place.ui  widget_input.ui
hmi/ui_json_place/: json_custom_widgets.ui
